--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
   </details>
 
   <!-- Speedtest Button -->
-  <button id="speedtest-btn" class="speedtest-btn" onclick="runSpeedtest()">⏱️ Speedtest starten</button>
+  <button id="speedtest-btn" class="speedtest-btn" onclick="()">⏱️ Speedtest starten</button>
 
   <!-- Feedback Buttons -->
   <div class="button-container">
@@ -551,7 +551,7 @@
       return data?.vpn?.last_speedtest?.timestamp || null;
     }
 
- function runSpeedtest() {
+ async function runSpeedtest() {
   const btn = document.getElementById('speedtest-btn');
   setBtnState(btn, 'Wird geprüft…', true);
   btn.classList.remove('success', 'error');
